PN-21150 - added communicationType to StreamEntity