@@ -3,7 +3,10 @@ package it.pagopa.pn.stream.service.impl;
 import it.pagopa.pn.stream.config.PnStreamConfigs;
 import it.pagopa.pn.stream.exceptions.PnStreamForbiddenException;
 import it.pagopa.pn.stream.exceptions.PnStreamMaxStreamsCountReachedException;
-import it.pagopa.pn.stream.generated.openapi.server.v1.dto.*;
+import it.pagopa.pn.stream.generated.openapi.server.v1.dto.StreamCreationRequestV29;
+import it.pagopa.pn.stream.generated.openapi.server.v1.dto.StreamListElement;
+import it.pagopa.pn.stream.generated.openapi.server.v1.dto.StreamMetadataResponseV29;
+import it.pagopa.pn.stream.generated.openapi.server.v1.dto.StreamRequestV29;
 import it.pagopa.pn.stream.middleware.dao.dynamo.EventEntityDao;
 import it.pagopa.pn.stream.middleware.dao.dynamo.StreamEntityDao;
 import it.pagopa.pn.stream.middleware.dao.dynamo.entity.StreamEntity;
@@ -17,8 +20,6 @@ import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import org.mockito.ArgumentCaptor;
 import org.mockito.Mockito;
-import org.springframework.http.HttpHeaders;
-import org.springframework.http.MediaType;
 import reactor.core.publisher.Flux;
 import reactor.core.publisher.Mono;
 import reactor.util.function.Tuples;
@@ -124,7 +125,7 @@ class StreamsServiceImplTest {
         StreamCreationRequestV29 req = new StreamCreationRequestV29();
         req.setTitle("titolo");
         req.setEventType(StreamCreationRequestV29.EventTypeEnum.TIMELINE);
-        req.setFilterValues(Arrays.asList("REQUEST_ACCEPTED"));
+        req.setFilterValues(List.of("REQUEST_ACCEPTED"));
         req.setWaitForAccepted(true);
 
         String uuid = UUID.randomUUID().toString();
@@ -162,6 +163,48 @@ class StreamsServiceImplTest {
     }
 
     @Test
+    void createEventStreamWithCommunicationType() {
+        String xpagopacxid = "PA-xpagopacxid";
+        String xpagopapnuid = "PA-xpagopapnuid";
+
+        StreamCreationRequestV29 req = new StreamCreationRequestV29();
+        req.setTitle("titolo");
+        req.setEventType(StreamCreationRequestV29.EventTypeEnum.STATUS);
+        req.setCommunicationType(StreamCreationRequestV29.CommunicationTypeEnum.INFORMAL);
+        req.setFilterValues(null);
+
+        String uuid = UUID.randomUUID().toString();
+        StreamEntity entity = new StreamEntity();
+        entity.setStreamId(uuid);
+        entity.setTitle(req.getTitle());
+        entity.setPaId(xpagopacxid);
+        entity.setEventType(req.getEventType().toString());
+        entity.setCommunicationType(req.getCommunicationType().toString());
+        entity.setFilterValues(new HashSet<>());
+        entity.setActivationDate(Instant.now());
+        entity.setSorting(Boolean.FALSE);
+
+        StreamEntity pentity = new StreamEntity();
+        pentity.setStreamId("2" + uuid);
+        pentity.setTitle(req.getTitle());
+        pentity.setPaId(xpagopacxid);
+        pentity.setEventType(req.getEventType().toString());
+        pentity.setFilterValues(new HashSet<>());
+        pentity.setActivationDate(Instant.now());
+
+        ArgumentCaptor<StreamEntity> captor = ArgumentCaptor.forClass(StreamEntity.class);
+        Mockito.when(streamEntityDao.findByPa(Mockito.anyString())).thenReturn(Flux.fromIterable(List.of(pentity)));
+        Mockito.when(streamEntityDao.save(captor.capture())).thenReturn(Mono.just(entity));
+        Mockito.when(streamUtils.retrieveMaxStreamsNumber(xpagopacxid)).thenReturn(maxStreams);
+
+        StreamMetadataResponseV29 res = webhookService.createEventStream(xpagopapnuid, xpagopacxid, null, null, Mono.just(req)).block(d);
+
+        assertNotNull(res);
+        assertEquals(StreamMetadataResponseV29.CommunicationTypeEnum.INFORMAL, res.getCommunicationType());
+        assertEquals(StreamCreationRequestV29.CommunicationTypeEnum.INFORMAL.toString(), captor.getValue().getCommunicationType());
+    }
+
+    @Test
     void createSortEventStreamWithWrongFilter() {
         //GIVEN
         String xpagopacxid = "PA-xpagopacxid";
@@ -171,7 +214,7 @@ class StreamsServiceImplTest {
         StreamCreationRequestV29 req = new StreamCreationRequestV29();
         req.setTitle("titolo");
         req.setEventType(StreamCreationRequestV29.EventTypeEnum.TIMELINE);
-        req.setFilterValues(Arrays.asList("TEST"));
+        req.setFilterValues(List.of("TEST"));
         req.setWaitForAccepted(true);
 
         String uuid = UUID.randomUUID().toString();
@@ -1537,6 +1580,43 @@ class StreamsServiceImplTest {
         Mockito.verify(schedulerService, never()).scheduleSortEvent(any(),any(),any(),any());
     }
 
+    @Test
+    void updateEventStreamWithCommunicationType() {
+        String xpagopacxid = "PA-xpagopacxid";
+        String xpagopapnuid = "PA-xpagopapnuid";
+        UUID uuidd = UUID.randomUUID();
+        String uuid = uuidd.toString();
+
+        StreamRequestV29 req = new StreamRequestV29();
+        req.setTitle("titolo");
+        req.setEventType(StreamRequestV29.EventTypeEnum.STATUS);
+        req.setCommunicationType(StreamRequestV29.CommunicationTypeEnum.INFORMAL);
+        req.setFilterValues(null);
+        req.setGroups(Arrays.asList("gruppo1", "gruppo2"));
+
+        StreamEntity currentEntity = new StreamEntity();
+        currentEntity.setStreamId(uuid);
+        currentEntity.setTitle(req.getTitle());
+        currentEntity.setPaId(xpagopacxid);
+        currentEntity.setEventType(req.getEventType().toString());
+        currentEntity.setFilterValues(new HashSet<>());
+        currentEntity.setActivationDate(Instant.now());
+        currentEntity.setGroups(List.of("gruppo1"));
+        currentEntity.setVersion("v26");
+
+        ArgumentCaptor<StreamEntity> captor = ArgumentCaptor.forClass(StreamEntity.class);
+        when(streamEntityDao.getWithRetryAfter(any(), any())).thenReturn(Mono.just(Tuples.of(currentEntity, Optional.empty())));
+        Mockito.when(streamEntityDao.update(captor.capture())).thenAnswer(invocation -> Mono.just(invocation.getArgument(0, StreamEntity.class)));
+
+        StreamMetadataResponseV29 res = webhookService.updateEventStream(
+                xpagopapnuid, xpagopacxid, Arrays.asList("gruppo1", "gruppo2"), null, uuidd, Mono.just(req)
+        ).block(d);
+
+        assertNotNull(res);
+        assertEquals(StreamRequestV29.CommunicationTypeEnum.INFORMAL.toString(), captor.getValue().getCommunicationType());
+        assertEquals(StreamMetadataResponseV29.CommunicationTypeEnum.INFORMAL, res.getCommunicationType());
+    }
+
 
     @Test
     void updateEventStreamWithGroupDelGroup() {
@@ -1701,6 +1781,7 @@ class StreamsServiceImplTest {
         StreamMetadataResponseV29 res = webhookService.getEventStream(xpagopapnuid,xpagopacxid,reqGroups,null, uuidd).block();
 
         //THEN
+        assertNotNull(res);
         Assertions.assertEquals(false, res.getWaitForAccepted());
 
         Mockito.verify(streamEntityDao).get(xpagopacxid, uuid);
